deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intikepri-static
  namespace: intikepri-static
  labels:
    app.kubernetes.io/name: intikepri-static
    app.kubernetes.io/instance: intikepri-static-prod
    app.kubernetes.io/part-of: intikepri
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: intikepri-static
  template:
    metadata:
      labels:
        app.kubernetes.io/name: intikepri-static
        app.kubernetes.io/instance: intikepri-static-prod
        app.kubernetes.io/part-of: intikepri
        app.kubernetes.io/managed-by: flux
    spec:
      containers:
        - name: sws
          image: registry.kudofools.dev/intikepri/intikepri-static:build-000060-sha-60f24eb6 # {"$imagepolicy": "flux-system:intikepri-static"}
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
            runAsUser: 65532
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 128Mi
              cpu: "200m"
            requests:
              memory: 32Mi
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
