deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intikepri-static
  namespace: intikepri-static
  labels:
    app.kubernetes.io/name: intikepri-static
    app.kubernetes.io/instance: intikepri-static-prod
    app.kubernetes.io/part-of: intikepri
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: intikepri-static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
